// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rest directive - Connection timeout from upstream call qraphql 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: network timeout at: http://localhost:1111/hello],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Rest directive - Empty response body call qraphql 1`] = `
Object {
  "data": Object {
    "hello": "",
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Rest directive - Error 401 from upstream call qraphql 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: 401: Unauthorized],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Rest directive - Error 404 from upstream call qraphql 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: 404: Not Found],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Rest directive - Error 500 from upstream call qraphql 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: 500: Internal Server Error],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Rest directive - GET with query params call qraphql 1`] = `
Object {
  "data": Object {
    "hello": "miriam!",
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Rest directive - Mutation call qraphql 1`] = `
Object {
  "data": Object {
    "hello": "world",
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Rest directive - POST with body from custom query argument call qraphql 1`] = `
Object {
  "data": Object {
    "hello": "world",
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Rest directive - POST with body from input query argument call qraphql 1`] = `
Object {
  "data": Object {
    "hello": "world",
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Rest directive - POST with predefined body call qraphql 1`] = `
Object {
  "data": Object {
    "hello": "world",
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Rest directive - Response timeout from upstream call qraphql 1`] = `
Object {
  "data": null,
  "errors": Array [
    [GraphQLError: network timeout at: http://localhost:1111/hello],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Rest directive - Simple GET call qraphql 1`] = `
Object {
  "data": Object {
    "hello": "world",
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
